# spinswift

./: .gitignore  CMakeLists.txt  LICENSE.md  Makefile  README.md
modules/CGSL/: Package.swift  module.modulemap
src/: Package.swift
src/Sources/: algebra.swift  main.swift
